--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -365,7 +365,8 @@ jobs:
 
       - name: Install rg35xx Stock Toolchain
         run: |
-
+          python -m pip install --upgrade pip
+          pip install Pillow
           wget -O /tmp/rg35xx-plus-aarch64-SDL2-SDK-0.1.0.tar.xz https://github.com/simotek/rg35xx-plus-aarch64-SDL2-SDK/releases/download/0.1.0/rg35xx-plus-aarch64-SDL2-SDK-0.1.0.tar.xz
           mkdir /opt/rg35xx-plus-aarch64-SDL2-SDK-0.1.0
           tar -xvf /tmp/rg35xx-plus-aarch64-SDL2-SDK-0.1.0.tar.xz -C /opt/rg35xx-plus-aarch64-SDL2-SDK-0.1.0  --strip-components=1
