--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -327,6 +327,11 @@ jobs:
           docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
           docker exec rg35xx-container bash -c "
             apt update && apt install -y python3 python3-pillow
+            echo "$PWD"
+            echo "ls"
+            ls
+            echo "ls /root/workspace"
+            ls /root/workspace
             git clone https://github.com/djdiskmachine/LittleGPTracker.git
             cd LittleGPTracker/projects
             make PLATFORM=RG35XXG
