--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -324,10 +324,12 @@ jobs:
 
       - name: Clone and build LGPT
         run: |
+          echo "Working DIR: $PWD"
+          ls
           docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
           docker exec rg35xx-container bash -c "
             apt update && apt install -y python3 python3-pillow
-            echo "$PWD"
+            echo "DOCKER Working DIR:$PWD"
             cd /root/workspace
             echo "ls"
             ls
