--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -326,7 +326,7 @@ jobs:
         run: |
           echo "Working DIR: $PWD"
           ls
-          docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
+          docker run -d --name rg35xx-container -v "$(pwd):/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
           docker exec rg35xx-container bash -c "
             apt update && apt install -y python3 python3-pillow
             echo "DOCKER Working DIR:$PWD"
@@ -336,7 +336,7 @@ jobs:
             echo "ls /root/workspace"
             ls /root/workspace
             #git clone https://github.com/djdiskmachine/LittleGPTracker.git
-            #cd LittleGPTracker/projects
+            cd projects
             make PLATFORM=RG35XXG
           "
           sudo chmod -R 777 ./workspace/LittleGPTracker/projects
