--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -324,26 +324,24 @@ jobs:
 
       - name: Clone and build LGPT
         run: |
-          echo "Working DIR: $PWD"
-          ls
-          docker run -d --name rg35xx-container -v "$(pwd):/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
+          ln -s /home/runner/work/LittleGPTracker/LittleGPTracker workspace
+          docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
           docker exec rg35xx-container bash -c "
             apt update && apt install -y python3 python3-pillow
-            echo "DOCKER Working DIR:$PWD"
-            cd /root/workspace
+            echo "$PWD"
             echo "ls"
             ls
-            echo "ls /root/workspace"
-            ls /root/workspace
-            #git clone https://github.com/djdiskmachine/LittleGPTracker.git
+            echo "ls ~/workspace"
             cd projects
+            #git clone https://github.com/djdiskmachine/LittleGPTracker.git
+            #cd LittleGPTracker/projects
             make PLATFORM=RG35XXG
           "
-          sudo chmod -R 777 ./workspace/LittleGPTracker/projects
-          sudo chown -R root:root ./workspace/LittleGPTracker/projects
+          sudo chmod -R 777 ./workspace/projects
+          sudo chown -R root:root ./workspace/projects
 
       - name: Package build
-        working-directory: ./workspace/LittleGPTracker/projects
+        working-directory: ./workspace/projects
         run: |
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
