--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -328,15 +328,14 @@ jobs:
           ln -s /home/runner/work/LittleGPTracker/LittleGPTracker workspace
           docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
           docker exec rg35xx-container bash -c "
-            echo "## b ##"
             apt update && apt install -y python3 python3-pillow
-            echo "## c ##"
-            echo "$PWD"
-            echo "ls"
+            echo \"## c ##\"
+            echo \"$PWD\"
+            echo \"ls\"
             ls
-            echo "ls ~/workspace"
+            echo \"ls ~/workspace\"
             cd projects
-            echo "## d ##"
+            echo \"## d ##\"
             #git clone https://github.com/djdiskmachine/LittleGPTracker.git
             #cd LittleGPTracker/projects
             make PLATFORM=RG35XXG
