--- a/projects/Makefile
+++ b/projects/Makefile
@@ -410,7 +410,7 @@ MIYOOFILES := \
 	MIYOOSystem.o \
 	SDLAudio.o
 
-RG35XXGDIRS = $(MIYOOFILES)
+RG35XXGFILES = $(MIYOOFILES)
 
 NDSFILES := \
 	NDSmain.o \
