objects need to match sources

--- a/projects/Makefile
+++ b/projects/Makefile
@@ -326,7 +326,7 @@ RG35XXSFILES := $(LINUXFILES) $(SDLAUDIOFILES) $(DUMMYMIDIFILES)
 STEAMFILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
 #X64FILES := $(LINUXFILES) $(RTMIDIFILES) $(SDLAUDIOFILES)
 X64FILES := $(LINUXFILES) $(SDLAUDIOFILES) $(DUMMYMIDIFILES)
-X86FILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
+X86FILES := $(LINUXFILES) $(SDLAUDIOFILES) $(DUMMYMIDIFILES)
 
 #---------------------------------------------------------------------------------
 # Consoles/Embedded
