--- a/projects/Makefile
+++ b/projects/Makefile
@@ -153,6 +153,7 @@ BITTBOYDIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS)
 DINGOODIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS) $(DUMMYMIDIDIRS)
 MIYOODIRS := $(DINGUXDIRS) $(DUMMYMIDIDIRS)
 RG35XXGDIRS := $(MIYOODIRS)
+GARLICPLUSDIRS := $(MIYOODIRS)
 RS97DIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS)
 
 GP2XDIRS := \
@@ -414,6 +415,7 @@ MIYOOFILES := \
 	SDLAudio.o
 
 RG35XXGFILES = $(MIYOOFILES)
+GARLICPLUSFILES = $(MIYOOFILES)
 
 NDSFILES := \
 	NDSmain.o \
