--- a/projects/Makefile
+++ b/projects/Makefile
@@ -152,8 +152,8 @@ DUMMYMIDIDIRS := \
 BITTBOYDIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS)
 DINGOODIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS) $(DUMMYMIDIDIRS)
 MIYOODIRS := $(DINGUXDIRS) $(DUMMYMIDIDIRS)
-RG35XXGDIRS := $(MIYOODIRS)
-GARLICPLUSDIRS := $(MIYOODIRS)
+GARLICDIRS := $(MIYOODIRS)
+GARLICPLUSDIRS := $(GARLICDIRS)
 RS97DIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS)
 
 GP2XDIRS := \
@@ -414,8 +414,8 @@ MIYOOFILES := \
 	MIYOOSystem.o \
 	SDLAudio.o
 
-RG35XXGFILES = $(MIYOOFILES)
-GARLICPLUSFILES = $(MIYOOFILES)
+GARLICFILES = $(MIYOOFILES)
+GARLICPLUSFILES = $(GARLICFILES)
 
 NDSFILES := \
 	NDSmain.o \
