GARLICPLUS Workflow, first attempt

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -355,6 +355,47 @@ jobs:
           tag_name: ${{ steps.extract_tag.outputs.tag_name }}
           files: ./workspace/LittleGPTracker/projects/*.zip
 
+  build-garlicplus:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Clone and build LGPT
+        run: |
+          ln -s /home/runner/work/LittleGPTracker/LittleGPTracker workspace
+          docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" shauninman/union-rg35xxplus-toolchain sleep infinity
+          docker exec rg35xx-container bash -c "
+            apt update && apt install -y python3 python3-pillow
+            cd projects
+            make PLATFORM=GARLICPLUS
+          "
+          sudo chmod -R 777 ./workspace/projects
+          sudo chown -R root:root ./workspace/projects
+
+      - name: Package build
+        working-directory: ./workspace/projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./workspace/LittleGPTracker/projects/*.zip
+
   build-rg35xxplus:
     runs-on: ubuntu-latest
 
