--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -365,12 +365,13 @@ jobs:
       - name: Clone and build LGPT
         run: |
           ln -s /home/runner/work/LittleGPTracker/LittleGPTracker workspace
-          docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" shauninman/union-rg35xxplus-toolchain sleep infinity
-          docker exec rg35xx-container bash -c "
-            apt update && apt install -y python3 python3-pillow
-            cd projects
-            make PLATFORM=GARLICPLUS
-          "
+          git clone https://github.com/shauninman/union-rg35xxplus-toolchain
+          cd union-rg35xxplus-toolchain
+          make shell
+          apt update && apt install -y python3 python3-pillow
+          cd projects
+          make PLATFORM=GARLICPLUS
+          
           sudo chmod -R 777 ./workspace/projects
           sudo chown -R root:root ./workspace/projects
 
