--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -350,7 +350,48 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ steps.extract_tag.outputs.tag_name }}
-          files: ./workspace/LittleGPTracker/projects/*.zip
+          files: ./workspace/projects/*.zip
+
+  build-garlicplus:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Garlic Plus toolchain
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          wget -O /tmp/rg35xxplus-toolchain.tar.xz https://github.com/simotek/union-rg35xxplus-toolchain/releases/download/20240830/rg35xxplus-toolchain.tar.xz
+          mkdir /opt/rg35xxplus-toolchain
+          tar -xvf /tmp/rg35xxplus-toolchain.tar.xz -C /opt/rg35xxplus-toolchain  --strip-components=1
+
+      - name: Build Garlic Plus
+        working-directory: projects
+        run: make PLATFORM=GARLICPLUS
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./projects/*.zip
 
   build-rg35xxplus:
     runs-on: ubuntu-latest
@@ -372,7 +413,7 @@ jobs:
         run: make PLATFORM=RG35XXPLUS
 
       - name: Package build
-        working-directory: ./workspace/LittleGPTracker/projects
+        working-directory: projects
         run: |
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
@@ -391,4 +432,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ steps.extract_tag.outputs.tag_name }}
-          files: ./workspace/LittleGPTracker/projects/*.zip
+          files: ./projects/*.zip
