--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,11 +78,90 @@ jobs:
           pip install Pillow
           sudo dpkg --add-architecture i386
           sudo apt update
-          sudo apt install -y make gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
+          sudo apt install -y make pkgconf gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
 
       - name: Build DEB
         working-directory: projects
         run: make PLATFORM=DEB
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./projects/*.zip
+
+  build-x86:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Install required libraries
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          sudo dpkg --add-architecture i386
+          sudo apt update
+          sudo apt install -y make pkgconf gcc-multilib g++-multilib libsdl2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
+
+      - name: Build X86
+        working-directory: projects
+        run: make PLATFORM=X86
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./projects/*.zip
+
+  build-x64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Install required libraries
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          sudo apt update
+          sudo apt install -y make pkgconf libsdl2-dev libasound2-plugins libjack-dev
+
+      - name: Build X64
+        working-directory: projects
+        run: make PLATFORM=X64
 
       - name: Package build
         working-directory: projects
@@ -232,7 +311,7 @@ jobs:
           tag_name: ${{ steps.extract_tag.outputs.tag_name }}
           files: ./projects/*.zip
 
-  build-rg35xx:
+  build-garlic:
     runs-on: ubuntu-latest
 
     steps:
@@ -241,18 +320,18 @@ jobs:
 
       - name: Clone and build LGPT
         run: |
+          ln -s /home/runner/work/LittleGPTracker/LittleGPTracker workspace
           docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
           docker exec rg35xx-container bash -c "
             apt update && apt install -y python3 python3-pillow
-            git clone https://github.com/djdiskmachine/LittleGPTracker.git
-            cd LittleGPTracker/projects
-            make PLATFORM=RG35XX
+            cd projects
+            make PLATFORM=GARLIC
           "
-          sudo chmod -R 777 ./workspace/LittleGPTracker/projects
-          sudo chown -R root:root ./workspace/LittleGPTracker/projects
+          sudo chmod -R 777 ./workspace/projects
+          sudo chown -R root:root ./workspace/projects
 
       - name: Package build
-        working-directory: ./workspace/LittleGPTracker/projects
+        working-directory: ./workspace/projects
         run: |
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
@@ -271,4 +350,86 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ steps.extract_tag.outputs.tag_name }}
-          files: ./workspace/LittleGPTracker/projects/*.zip
+          files: ./workspace/projects/*.zip
+
+  build-garlicplus:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Garlic Plus toolchain
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          wget -O /tmp/rg35xxplus-toolchain.tar.xz https://github.com/simotek/union-rg35xxplus-toolchain/releases/download/20240830/rg35xxplus-toolchain.tar.xz
+          mkdir /opt/rg35xxplus-toolchain
+          tar -xvf /tmp/rg35xxplus-toolchain.tar.xz -C /opt/rg35xxplus-toolchain  --strip-components=1
+
+      - name: Build Garlic Plus
+        working-directory: projects
+        run: make PLATFORM=GARLICPLUS
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./projects/*.zip
+
+  build-rg35xxplus:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install rg35xx Stock Toolchain
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          wget -O /tmp/rg35xx-plus-aarch64-SDL2-SDK-0.1.0.tar.xz https://github.com/simotek/rg35xx-plus-aarch64-SDL2-SDK/releases/download/0.1.0/rg35xx-plus-aarch64-SDL2-SDK-0.1.0.tar.xz
+          mkdir /opt/rg35xx-plus-aarch64-SDL2-SDK-0.1.0
+          tar -xvf /tmp/rg35xx-plus-aarch64-SDL2-SDK-0.1.0.tar.xz -C /opt/rg35xx-plus-aarch64-SDL2-SDK-0.1.0  --strip-components=1
+
+      - name: Build rg35xx Stock
+        working-directory: projects
+        run: make PLATFORM=RG35XXPLUS
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./projects/*.zip
