--- a/projects/Makefile.GARLIC
+++ b/projects/Makefile.GARLIC
@@ -1,34 +1,35 @@
 -include $(PWD)/rules_base
 STRIP = $(CROSS_COMPILE)strip
 
-%.elf: $(OFILES)
-	$(CXX) $(LDFLAGS) -o $@ $(OFILES) $(LIBS)
-	@$(STRIP) $@
+DEFINES := \
+	-DBUFFERED \
+	-DCPP_MEMORY \
+	-D_NDEBUG \
+	-DHAVE_STDINT_H \
+	-D_NO_JACK_  
 
 DEVKIT = /opt/miyoo/
 CROSS_COMPILE=$(DEVKIT)bin/arm-miyoo-linux-uclibcgnueabi-
-PLATFORM	:= RG35XX
-
 CC = $(CROSS_COMPILE)gcc
 CXX = $(CROSS_COMPILE)g++
+TOOLPATH=$(DEVKIT)/usr/bin
 SYSROOT     := $(shell $(CROSS_COMPILE)gcc --print-sysroot)
+
 SDL_CFLAGS  := $(shell $(SYSROOT)/usr/bin/sdl-config --cflags)
 SDL_LIBS    := $(shell $(SYSROOT)/usr/bin/sdl-config --libs)
 
-DEFINES = -DHAVE_STDINT_H -D_NDEBUG -D_NO_JACK_ -I$(PWD)/../sources -DCPP_MEMORY $(SDL_CFLAGS) $(SDL_LIBS) -DBUFFERED
-INCLUDES = -Iinclude $(SDL_CFLAGS)
+# optimization
 OPT_FLAGS  = -O3 -Ofast -fdata-sections -fdata-sections -fno-common -fno-PIC -flto -marm -mtune=cortex-a53 -mfpu=neon-vfpv4 -mfloat-abi=hard
-
-OUTPUT = ../lgpt-rg35xx
-
-TOOLPATH=$(DEVKIT)/usr/bin
-PREFIX		:=	arm-linux-gnueabihf-
-
+PREFIX	:=	arm-linux-gnueabihf-
+INCLUDES:=	-Iinclude $(SDL_CFLAGS) -I$(PWD)/../sources 
 CFLAGS	:=	$(DEFINES) $(INCLUDES) $(OPT_FLAGS) -Wall  
 CXXFLAGS:=	$(CFLAGS) -std=gnu++03 
-
-EXTENSION:= elf
-
-LIBS	:=  -lSDL -lSDL_mixer -lpthread
+LIBS	:=	$(SDL_LIBS) -lpthread
 LIBDIRS	:=	$(DEKVIT)/usr/lib
 LIBDIRS	+=	$(DEKVIT)/usr/include
+OUTPUT := ../lgpt-garlic
+EXTENSION:= elf
+
+%.elf: $(OFILES)
+	$(CXX) $(LDFLAGS) -o $@ $(OFILES) $(LIBS)
+	@$(STRIP) $@
