Reenable midi in X64

--- a/projects/Makefile.X64
+++ b/projects/Makefile.X64
@@ -8,7 +8,7 @@ DEFINES := \
 	-D__LINUX_ALSASEQ__ \
         -DSDL2 \
         -DSDLAUDIO \
-        -DDUMMYMIDI
+        -DRTMIDI
 
 ALSA_CFLAGS := $(shell pkg-config alsa --cflags)
 ALSA_LIBS := $(shell pkg-config alsa --libs)
